k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: barebone-http-1
spec:
  ports:
  - name: barebone-http-1
    port: 80
    targetPort: 3000
  selector:
    app: barebone-http-1
  type: ClusterIP
